--- a/src/mylangchain_app/00Basic/002_PromptTemplate종류.ipynb
+++ b/src/mylangchain_app/00Basic/002_PromptTemplate종류.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gs\n"
+      "gsk_n\n"
      ]
     }
    ],
@@ -38,10 +38,10 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "# .env 파일을 불러와서 환경 변수로 설정\n",
-    "load_dotenv(dotenv_path='../.env')\n",
+    "load_dotenv()\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:2])"
+    "print(OPENAI_API_KEY[:5])"
    ]
   },
   {
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('ChatGPT는 자연어 처리(NLP) 기술을 사용하여 대규모 데이터 세트에서 학습합니다. 이 모델은 주어진 문맥 내에서 다음에 올 '\n",
-      " '가능성이 가장 높은 단어를 예측하도록 설계된 변환기 아키텍처를 사용합니다. ChatGPT는 방대한 양의 텍스트 데이터로 훈련함으로써 '\n",
-      " '다양한 주제에 대한 지식을 습득하고 일관된 문장을 생성하는 능력을 개발합니다.')\n"
+      "('ChatGPT는 인터넷의 방대한 텍스트에서 단어와 문장의 등장 패턴을 통계적으로 학습합니다.  \\n'\n",
+      " '학습 과정에서 모델은 주어진 앞단어들을 바탕으로 다음에 올 토큰의 확률을 예측하며, 이를 반복해 문장을 생성합니다.  \\n'\n",
+      " '인간의 피드백 강화학습(RLHF)으로 가치를 조정해 유용하고 안전한 응답을 만들어냅니다.')\n"
      ]
     }
    ],
@@ -83,7 +83,9 @@
     "llm = ChatOpenAI(\n",
     "    api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    #model=\"openai/gpt-oss-120b\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0.7\n",
     ")\n",
     "\n",
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -110,24 +112,22 @@
      "output_type": "stream",
      "text": [
       "input_variables=['count', 'language', 'model_name'] input_types={} partial_variables={} template='{model_name} 모델의 학습 원리를 {count} 문장으로 한국어로 답변해 주세요.\\n\\n 그리고 {model_name} 모델의 장점을 요약 정리해 주세요\\n\\n {model_name} 모델과 비슷한 AI 모델은 어떤 것이 있나요? 모델명은 {language}로 답변해 주세요.'\n",
-      "('ChatGPT 모델의 학습 원리는 다음과 같습니다.\\n'\n",
+      "('ChatGPT는 인터넷의 방대한 텍스트를 학습해 단어·문장 간 확률 관계를 기억하고, 사용자 입력에 가장 자연스러운 다음 퀀텀을 예측해 '\n",
+      " '생성합니다.  \\n'\n",
+      " '학습 단계에서 ‘사람이 선호하는 답변’을 보고 보상·벌점을 주는 강화학습을 추가로 거쳐, 정확하고 유용한 응답을 만들어내도록 미세 '\n",
+      " '조정됩니다.  \\n'\n",
+      " '결국 통계적 패턴 매칭만으로도 문맥을 유지하며 질문에 맞춤형 글·대화를 이어가는 능력을 갖추게 됩니다.\\n'\n",
       " '\\n'\n",
-      " 'ChatGPT는 대규모 언어 모델로서, 수십억 개의 매개변수를 가지고 있습니다. 이 모델은 다양한 소스의 대규모 텍스트 데이터셋을 '\n",
-      " '사용하여 사전 학습되었으며, 이를 통해 자연어 처리 작업에 필요한 패턴과 관계를 학습합니다. 학습 과정에서 모델은 주어진 입력 텍스트에 '\n",
-      " '대해 다음에 올 단어를 예측하도록 훈련되며, 이를 통해 언어 모델의 성능을 향상시킵니다.\\n'\n",
+      " 'ChatGPT의 핵심 장점  \\n'\n",
+      " '- 맥락을 길게 기억하며 자연스러운 대화 유지  \\n'\n",
+      " '- 코드 작성·번역·요약·창작 등 다양한 분야에 즉시 활용 가능  \\n'\n",
+      " '- 추가 학습 없이도 즉흥적 질문에 높은 품질로 답변  \\n'\n",
+      " '- 인터페이스가 간단해 전문 지식 없이도 누구나 쓸 수 있음  \\n'\n",
+      " '- 지속적인 강화학습으로 허위 답변을 줄이고 안전성 햇상\\n'\n",
       " '\\n'\n",
-      " 'ChatGPT 모델의 장점을 요약하면 다음과 같습니다.\\n'\n",
-      " '\\n'\n",
-      " '*   자연어 이해 능력: ChatGPT는 자연어 입력에 대해 높은 이해 능력을 보여주며, 다양한 주제에 대해 대화할 수 있습니다.\\n'\n",
-      " '*   생성 능력: ChatGPT는 자연어 텍스트를 생성할 수 있으며, 이를 통해 콘텐츠 생성, 언어 번역, 요약 등 다양한 작업에 '\n",
-      " '활용할 수 있습니다.\\n'\n",
-      " '*   지식 습득: ChatGPT는 대규모 텍스트 데이터셋을 학습함으로써 다양한 분야에 대한 지식을 습득할 수 있습니다.\\n'\n",
-      " '\\n'\n",
-      " 'ChatGPT 모델과 비슷한 AI 모델로는 다음과 같은 것들이 있습니다.\\n'\n",
-      " '\\n'\n",
-      " '*   **LLaMA**: Llama는 Meta에서 개발한 대규모 언어 모델입니다.\\n'\n",
-      " '*   **PaLM**: PaLM은 구글이 개발한 대규모 언어 모델로서, 5400억 개의 매개변수를 가지고 있습니다.\\n'\n",
-      " '*   **Bard**: Bard는 Gemini를 위해 특별히 설계된 대화형 AI 챗봇으로서,  제미나이 모델을 기반으로 하고 있습니다.')\n"
+      " 'ChatGPT와 비슷한 AI 모델  \\n'\n",
+      " '구글 바드, 파이썬 코드 어시스턴트 코드다-T5, 메타 LLaMA, 카카오 코딩 도우미 코드-에딧, 네이버 클로바X·클로바 스튜디오, '\n",
+      " '카카오브레인 코딩 어시스턴트 코드-에딧, 업스테이지 세계 최고 클라우드 LLM, 에이치닉스 티톡·에이치닉스 챗 등이 있습니다.')\n"
      ]
     }
    ],
@@ -146,12 +146,12 @@
     "              + PromptTemplate.from_template(\"\\n\\n 그리고 {model_name} 모델의 장점을 요약 정리해 주세요\")\n",
     "              + \"\\n\\n {model_name} 모델과 비슷한 AI 모델은 어떤 것이 있나요? 모델명은 {language}로 답변해 주세요.\"\n",
     ")\n",
-    "combined_prompt.format(model_name=\"ChatGPT\", count=3, language=\"영어\")\n",
+    "combined_prompt.format(model_name=\"ChatGPT\", count=3, language=\"한국어\")\n",
     "print(combined_prompt)\n",
     "\n",
     "#llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "chain = combined_prompt | llm | StrOutputParser()\n",
-    "response = chain.invoke({\"model_name\":\"ChatGPT\", \"count\":3, \"language\":\"영어\"})\n",
+    "response = chain.invoke({\"model_name\":\"ChatGPT\", \"count\":3, \"language\":\"한국어\"})\n",
     "\n",
     "pprint(response)"
    ]
@@ -175,8 +175,9 @@
     "prompt_template = PromptTemplate.from_template(template_text)\n",
     "\n",
     "questions = [\n",
-    "    {\"model_name\": \"GPT-4\", \"count\": 2},\n",
-    "    {\"model_name\": \"Gemma\", \"count\": 3},\n",
+    "    {\"model_name\": \"GPT-4\", \"count\": 3},\n",
+    "    {\"model_name\": \"Gemini\", \"count\": 4},\n",
+    "    {\"model_name\": \"claude\", \"count\": 4},\n",
     "]\n",
     "\n",
     "# 여러 개의 프롬프트를 미리 생성\n",
@@ -674,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
