--- a/src/mylangchain_app/00Basic/002_PromptTemplate종류.ipynb
+++ b/src/mylangchain_app/00Basic/002_PromptTemplate종류.ipynb
@@ -104,33 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input_variables=['count', 'language', 'model_name'] input_types={} partial_variables={} template='{model_name} 모델의 학습 원리를 {count} 문장으로 한국어로 답변해 주세요.\\n\\n 그리고 {model_name} 모델의 장점을 요약 정리해 주세요\\n\\n {model_name} 모델과 비슷한 AI 모델은 어떤 것이 있나요? 모델명은 {language}로 답변해 주세요.'\n",
-      "('ChatGPT는 인터넷의 방대한 텍스트를 학습해 단어·문장 간 확률 관계를 기억하고, 사용자 입력에 가장 자연스러운 다음 퀀텀을 예측해 '\n",
-      " '생성합니다.  \\n'\n",
-      " '학습 단계에서 ‘사람이 선호하는 답변’을 보고 보상·벌점을 주는 강화학습을 추가로 거쳐, 정확하고 유용한 응답을 만들어내도록 미세 '\n",
-      " '조정됩니다.  \\n'\n",
-      " '결국 통계적 패턴 매칭만으로도 문맥을 유지하며 질문에 맞춤형 글·대화를 이어가는 능력을 갖추게 됩니다.\\n'\n",
-      " '\\n'\n",
-      " 'ChatGPT의 핵심 장점  \\n'\n",
-      " '- 맥락을 길게 기억하며 자연스러운 대화 유지  \\n'\n",
-      " '- 코드 작성·번역·요약·창작 등 다양한 분야에 즉시 활용 가능  \\n'\n",
-      " '- 추가 학습 없이도 즉흥적 질문에 높은 품질로 답변  \\n'\n",
-      " '- 인터페이스가 간단해 전문 지식 없이도 누구나 쓸 수 있음  \\n'\n",
-      " '- 지속적인 강화학습으로 허위 답변을 줄이고 안전성 햇상\\n'\n",
-      " '\\n'\n",
-      " 'ChatGPT와 비슷한 AI 모델  \\n'\n",
-      " '구글 바드, 파이썬 코드 어시스턴트 코드다-T5, 메타 LLaMA, 카카오 코딩 도우미 코드-에딧, 네이버 클로바X·클로바 스튜디오, '\n",
-      " '카카오브레인 코딩 어시스턴트 코드-에딧, 업스테이지 세계 최고 클라우드 LLM, 에이치닉스 티톡·에이치닉스 챗 등이 있습니다.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "template_text = \"{model_name} 모델의 학습 원리를 {count} 문장으로 한국어로 답변해 주세요.\"\n",
     "\n",
@@ -214,7 +190,8 @@
     "\n",
     "chat_prompt = ChatPromptTemplate.from_messages([\n",
     "    # role, message\n",
-    "    (\"system\", \"This system is an expert in answering questions about {topic}. Please provide clear and detailed explanations.\"),\n",
+    "    (\"system\", \"This system is an expert in answering questions about {topic}. \\\n",
+    "     Please provide clear and detailed explanations.\"),\n",
     "    (\"human\", \"{model_name} 모델의 학습 원리를 설명해 주세요.\"),\n",
     "])\n",
     "\n",
@@ -323,27 +300,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[SystemMessage(content='You are a helpful assistant that translates English to Korean.', additional_kwargs={}, response_metadata={}), HumanMessage(content='I love programming.', additional_kwargs={}, response_metadata={})]\n",
-      "나는 프로그래밍을 좋아해요.\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 필요한 라이브러리 임포트\n",
     "from langchain.prompts import ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate\n",
@@ -398,29 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'langchain_core.messages.ai.AIMessage'>\n",
-      "태양계에는 8개의 행성이 있습니다. \n",
-      "\n",
-      "1.  수성: 태양과 가장 가까운 행성으로, 표면이 암석으로 구성되어 있고 극도로 높은 온도와 낮은 온도가 반복됩니다.\n",
-      "2.  금성: 태양계에서 두 번째로 가까운 행성으로, 두꺼운 대기로 인해 극심한 온실 효과가 발생하여 매우 뜨겁습니다.\n",
-      "3.  지구: 우리가 사는 행성으로, 물과 대기가 있어 생명체가 존재할 수 있습니다.\n",
-      "4.  화성: 태양계에서 네 번째로 가까운 행성으로, 붉은색의 모래사막으로 덮여 있고 물과 생명체의 존재 가능성이 있습니다.\n",
-      "5.  목성: 태양계에서 가장 큰 행성으로, 가스 거인이며 강력한 자기장과 수많은 위성을 가지고 있습니다.\n",
-      "6.  토성: 태양계에서 두 번째로 큰 행성으로, 가스 거인이며 아름다운 고리를 가지고 있습니다.\n",
-      "7.  천왕성: 태양계에서 일곱 번째로 가까운 행성으로, 가스 거인이며 자전축이 기울어져 있어 극단적인 기후 변화를 경험합니다.\n",
-      "8.  해왕성: 태양계에서 가장 먼 행성으로, 가스 거인이며 강한 바람과 극적인 기후 변화를 가지고 있습니다.\n",
-      "\n",
-      "이러한 행성들은 각각 고유한 특징과 성질을 가지고 있으며, 태양계에서 중요한 역할을 합니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PromptTemplate을 사용하지 않는 경우\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -496,10 +433,11 @@
     "# 모델 생성 및 체인 구성\n",
     "#llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0.0)\n",
     "chain = final_prompt | llm\n",
+    "print(llm)\n",
     "print(chain)\n",
     "\n",
     "# 테스트 실행\n",
-    "result = chain.invoke({\"input\": \"태양계의 행성들을 간략히 정리해 주세요.\"})\n",
+    "result = chain.invoke({\"input\": \"양자컴퓨팅에 대하여 설명해 주세요.\"})\n",
     "print(result.content)"
    ]
   },
@@ -546,7 +484,8 @@
     "\n",
     "# 프롬프트 템플릿 정의 (부분 변수 적용)\n",
     "prompt = PromptTemplate(\n",
-    "    template=\"{season}에 일어나는 대표적인 지구과학 현상은 {phenomenon}이 맞나요? {season}에 주로 발생하는 지구과학 현상을 3개 알려주세요\",\n",
+    "    template=\"{season}에 일어나는 대표적인 지구과학 현상은 {phenomenon}이 맞나요? \\\n",
+    "        {season}에 주로 발생하는 지구과학 현상을 3개 알려주세요\",\n",
     "    input_variables=[\"phenomenon\"],  # 사용자 입력 필요\n",
     "    partial_variables={\"season\": get_current_season()}  # 동적으로 계절 값 할당\n",
     ")\n",
@@ -566,9 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 계절: 가을\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -599,8 +546,33 @@
     "            return \"여름\"\n",
     "\n",
     "# Step 1: 현재 계절 결정\n",
-    "season = get_current_season(\"north\")  # 계절 값 얻기\n",
-    "print(f\"현재 계절: {season}\")\n",
+    "season_name = get_current_season()  # 계절 값 얻기\n",
+    "print(f\"현재 계절: {season_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 가을에 발생하는 자연 현상:\n",
+      "1. 대기청정도 높아지는 ‘고기압 안정권’  \n",
+      "   가을이 되면 북서쪽에서 내려온 차고 건조한 고기압이 한반도를 장기간 지배한다. 위에서 내려오는 공기가 점차 가열되면서 대기가 안정층을 이루고, 수증기·미세먼지가 위로 올라가지 못해 시야가 맑아진다. 덕분에 하늘이 높고 푸르게 보이는 ‘가을 고기압’ 현상이 나타난다.\n",
+      "\n",
+      "2. 단풍(엽색변화)  \n",
+      "   일교차가 크고 햇빛이 강한 10월 무렵, 나뭇잎의 엽록소가 파괴되면서 기존에 숨겨졌던 카로티노이드·안토시아닌 등의 색소가 드러난다. 고도·위도에 따라 산 정상부턴데 단풍이 먼저 시작되며, 2 주 정도면 산 전체가 붉고 노랗게 물든다.\n",
+      "\n",
+      "3. 산악풍속 차가운 ‘결로·안개’  \n",
+      "   밤 사방이 방사냉각으로 냉각된 산록이나 계곡은 주변 공기보다 기온이 낮아지면서, 공기 중 수증기가 응결해 백색의 박무(산안개)를 형성한다. 특히 계곡 바닥에 깔리는 ‘계곡안개’는 이른 아침에 차가운 공기가 낮은 곳에 고여 있을 때 자주 관측된다.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Step 2: 해당 계절의 자연 현상 추천\n",
     "prompt2 = ChatPromptTemplate.from_template(\n",
@@ -610,16 +582,16 @@
     "\n",
     "# OpenAI 모델 사용\n",
     "#llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0.0)\n",
-    "llm = ChatOpenAI(\n",
-    "    #api_key=OPENAI_API_KEY,\n",
-    "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
-    "    temperature=0.0\n",
-    ")\n",
+    "# llm = ChatOpenAI(\n",
+    "#     #api_key=OPENAI_API_KEY,\n",
+    "#     base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
+    "#     model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "#     temperature=0.0\n",
+    "# )\n",
     "\n",
     "# 체인 2: 자연 현상 추천 (입력: 계절 → 출력: 자연 현상 목록)\n",
     "chain2 = (\n",
-    "    {\"season\": lambda x : season}  # chain1의 출력을 season 변수로 전달\n",
+    "    {\"season\": lambda x : season_name}  # chain1의 출력을 season 변수로 전달\n",
     "    | prompt2\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
@@ -627,7 +599,7 @@
     "\n",
     "# 실행: 현재 계절에 따른 자연 현상 추천\n",
     "response = chain2.invoke({})\n",
-    "print(f\"\\n {season}에 발생하는 자연 현상:\\n{response}\")"
+    "print(f\"\\n {season_name}에 발생하는 자연 현상:\\n{response}\")"
    ]
   },
   {
@@ -640,9 +612,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 프롬프트: 현재 1달러 = 1377.98원 기준으로 환율 정보를 알려드립니다. 이에 대한 분석을 제공해 주세요.\n",
+      " 모델 응답: 현재 환율 1달러 = 1,377.98원은 **역대 최고 수준**에 근접한 수치입니다. 단순 숫자를 넘어 한국 경제·금융 시스템에 복합적 파급효과를 낳고 있어, 아래 4가지 축으로 정리해 드립니다.\n",
+      "\n",
+      "1. 도달 배경 (Why so high?)  \n",
+      "   - 미국발 고금리·강달러: 연준 기준금리 5.25~5.50 % vs 한국 3.50 % → 역(逆)금리 차 1.75 %p.  \n",
+      "   - 안전자산 선호: 연준 ‘higher for longer’ +美 디폴트·부채리스크 논란 → 달러수요↑.  \n",
+      "   - 한국 경상수지 적자 전환: 에너지·원자재 고물가 + 수출 둔화로 2022년 4분기 이후 5분기 연속 누적 적자(또는 흑자 축소).  \n",
+      "   - 중국·동남아 수출 둔화: 한국 수출의 50 %가량이 이 지역 직간접 의존.  \n",
+      "   - 외국인 자금 이탈: 2023년 4월~5월 韓 주식·채권시장에서 80억 달러 이상 순유출.  \n",
+      "   - ‘원化’ 유동성↑: 올들어 韓 기업 해외차입 규모(달러 표시) 2022년 대비 20 % 증가 → 달러 수요 늘고 원화 공급↑.\n",
+      "\n",
+      "2. 거시경제·시장 임팩트  \n",
+      "   물가·가계  \n",
+      "   - 수입물가 상승률 1 % → 소비자물가 상승률 0.15~0.2 %(BOK 추정).  \n",
+      "   - 1,400원 돌파 시 연간 물가 0.4 %p 추가 상승 → 목표치(2 %) 상회.  \n",
+      "   기업  \n",
+      "   - 수입 의존업종(석유·화학, 식품, 항공유) 원가↑, 내수·건설 자재비↑.  \n",
+      "   - 수출기업(반도체·조선·자동차) 환율 플러스지만, 수입 원자재 비중이 높아 순이익 개선은 제한적.  \n",
+      "   - 2022년 연결결기준 韓 상장사 40 %가 재무상황표상 ‘외화차입’ 보유 → 환차손 위험.  \n",
+      "   금융  \n",
+      "   - 은행·증권社 외화PF(프로젝트파이낸스) 부실 우려.  \n",
+      "   - 외환변동성 ↑ → CDS 프리미엄 70bp(5월 기준)로 1년 새 두 배.  \n",
+      "   - 가계부채 1,870조 원 중 변동금리 비중 55 % → 금리·환율 이중부담.\n",
+      "\n",
+      "3. 정책 대응 현황  \n",
+      "   - 한국은행: 1) 美 통화스와프(조기) 재활용, 2) 외화유동성 공급(CDC) 360억 달러, 3) ‘외화안정화 브리지’ 50억 달러.  \n",
+      "   - 재정·산업부: 수입 물류비·에너지비 지원(올해 5조 원), 수출보험·보증 11조 원.  \n",
+      "   - 금융당국: 외화·원화동시차입 규제 완화(LCR·NSFR), 외국환은행 한도 확대.  \n",
+      "   - 시장개입(Verbal & Actual): 5월 美 재무부 방한 직전 2.7조 원 규모 달러 매도(외환평형기금) → ‘넘버’ 1,400원 무력화 의지 표명.\n",
+      "\n",
+      "4. 향후 전개 시나리오 (향후 6~12개월)  \n",
+      "   ① ‘연준 금리 동결→물가 둔화→달러 약세’ 시(확률 45 %)  \n",
+      "      – 달러인덱스 100→95, 원/달러 1,300원 후반.  \n",
+      "   ② ‘연준 추가 금리 인상 or 글로벌 경기 침체’ 시(확률 30 %)  \n",
+      "      – 1달러 1,450원 돌파 가능성.  \n",
+      "   ③ ‘현 수준 유지’ 시(확률 25 %)\n",
+      "\n",
+      "핵심 모니터링 지표  \n",
+      "   - 미국 CPI·PCE(물가), 물가 기대치(5Y5Y breakeven), 연준 dot plot  \n",
+      "   - 한국 경상수지(6월까지 누적), 관광·운송수지(‘에어분수’ 회복)  \n",
+      "   - 韓·美 금리차(10년물 국채 스프레드)  \n",
+      "   - 외국인 주식·채권 순매수(+), 외화 예수금·외화대출 변화  \n",
+      "   - 중국 PMI, EU PMI(한국 수출의 25 % 수요)\n",
+      "\n",
+      "투자·운용 관점  \n",
+      "   - **헤지**: 수입 의존 기업·가계는 달러 선물환(6개월물) 1,350원대에 70~80 % 물량 롤오버.  \n",
+      "   - **수출기업**: 달러 매도헤지(put spread) 1,300원 스트라이크·1,250원 스트라이크 조합으로 비용 절감.  \n",
+      "   - **자산배분**: 원화 약세 지속 시 원자재 ETF(금, 구리), 내수 물가 연동 우선주(통신·소매) 비중 확대.  \n",
+      "   - **국내 채권**: 역외물 5년물 IRS 3.8 % 수준, 금리 상단 구간 → 중단기 국채 선호.  \n",
+      "   - **주식**: 원화강세(1,300원 이하) 시 반도체·배터리·화장품 업종 PER 디스카운트 해소 → 선행매수.\n",
+      "\n",
+      "종합  \n",
+      "   “기준금리 역차 + 경상수지 악화 + 글로벌 안전자산 선호”가 맞물리며 1,400원에 근접한 고환율이 지속되고 있습니다. 연준이 금리 인상을 멈추거나 실질 금리가 둔화될 때까지 1,300원 중·후반에서 등락할 가능성이 크며, 1,400원 돌파 시 한국은행의 추가 외환시장 개입(물적·언어)과 재정·금융지원이 병행될 것으로 예상됩니다. 기업과 가계는 환율 리스크를 사전에 분산·헤지하고, 글로벌 경기·물가 지표를 면밀히 체크하면서 단계적 대응 전략을 수립하는 것이 중요합니다.\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from langchain_core.prompts import PromptTemplate\n",
