--- a/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
+++ b/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gsk_fSXtdh\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
     "# .env 파일을 불러와서 환경 변수로 설정\n",
-    "load_dotenv(dotenv_path='../.env')\n",
+    "load_dotenv()\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:5])"
+    "print(OPENAI_API_KEY[:10])"
    ]
   },
   {
@@ -24,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your response should be a list of comma separated values, eg: `foo, bar, baz` or `foo,bar,baz`\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.output_parsers import CommaSeparatedListOutputParser\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -38,6 +54,25 @@
     "\n",
     "# 출력 형식 지침 가져오기\n",
     "format_instructions = output_parser.get_format_instructions()\n",
+    "print(format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI 관련 기술 목록:\n",
+      "['Machine Learning', 'Deep Learning', 'Natural Language Processing', 'Computer Vision', 'Reinforcement Learning']\n",
+      " '../data/ai_technologies.csv' 파일로 저장 완료!\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# 프롬프트 템플릿 설정\n",
     "prompt = PromptTemplate(\n",
@@ -49,9 +84,9 @@
     "# OpenAI 모델 설정\n",
     "#model = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
     "llm = ChatOpenAI(\n",
-    "    api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
     "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    #model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0.7\n",
     ")\n",
     "\n",
@@ -320,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
