--- a/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
+++ b/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,8 @@
     "llm = ChatOpenAI(\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
     "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
-    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "    #model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "    model=\"openai/gpt-oss-120b\",\n",
     "    temperature=0.7\n",
     ")\n"
    ]
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -196,33 +197,9 @@
       "```\n",
       "\n",
       "Name 컬럼 출력\n",
-      "<class 'dict'>\n",
-      "{'Name': 0                                Braund, Mr. Owen Harris\n",
-      "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
-      "2                                 Heikkinen, Miss. Laina\n",
-      "3           Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
-      "4                               Allen, Mr. William Henry\n",
-      "                             ...                        \n",
-      "886                                Montvila, Rev. Juozas\n",
-      "887                         Graham, Miss. Margaret Edith\n",
-      "888             Johnston, Miss. Catherine Helen \"Carrie\"\n",
-      "889                                Behr, Mr. Karl Howell\n",
-      "890                                  Dooley, Mr. Patrick\n",
-      "Name: Name, Length: 891, dtype: object}\n",
-      "첫번째 행 출력\n",
-      "{'0': PassengerId                          1\n",
-      "Survived                             0\n",
-      "Pclass                               3\n",
-      "Name           Braund, Mr. Owen Harris\n",
-      "Sex                               male\n",
-      "Age                               22.0\n",
-      "SibSp                                1\n",
-      "Parch                                0\n",
-      "Ticket                       A/5 21171\n",
-      "Fare                              7.25\n",
-      "Cabin                              NaN\n",
-      "Embarked                             S\n",
-      "Name: 0, dtype: object}\n"
+      "오류 발생: Request 'The command for the user's query is: \n",
+      "column:Name' is not correctly formatted.                     Please refer to the format instructions.\n",
+      "For troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/OUTPUT_PARSING_FAILURE \n"
      ]
     }
    ],
@@ -275,7 +252,7 @@
     "\n",
     "    parser_output = chain.invoke({\"query\": df_query})\n",
     "    print(type(parser_output))\n",
-    "    print(parser_output)\n",
+    "    #print(parser_output)\n",
     "\n",
     "        # **첫번째 행을 표시하십시오.**\n",
     "    print('첫번째 행 출력')\n",
@@ -286,14 +263,13 @@
     "\n",
     "    #Please tell me the average value of the Fare column.\n",
     "    print('Farre 컬럼의 평균값 출력')\n",
-    "    df_query3 = \"lease tell me the average value of the Fare column.\"\n",
+    "    df_query3 = \"Show me the average value of the Fare column.\"\n",
     "\n",
     "    parser_output3 = chain.invoke({\"query\": df_query3})\n",
     "    print(parser_output3)\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"오류 발생: {e}\")\n",
-    "\n"
+    "    print(f\"오류 발생: {e}\")\n"
    ]
   },
   {
