--- a/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "# 필수 라이브러리 설치\n",
-    "#%pip install pydantic"
+    "#poetry add pydantic"
    ]
   },
   {
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gs\n"
+      "gsk_fSX\n"
      ]
     }
    ],
@@ -38,12 +38,12 @@
     "load_dotenv(dotenv_path='../.env')\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:2])"
+    "print(OPENAI_API_KEY[:7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,13 @@
     "from langchain.output_parsers import PydanticOutputParser\n",
     "\n",
     "from pydantic import BaseModel, Field\n",
-    "from typing import List"
+    "from typing import List\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,17 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pydantic 출력 파서 초기화\n",
-    "parser = PydanticOutputParser(pydantic_object=MovieRecommendation)"
+    "parser = PydanticOutputParser(pydantic_object=MovieRecommendation)\n",
+    "print(parser.get_format_instructions())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,33 +118,10 @@
     "model = ChatOpenAI(\n",
     "    #api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0.7\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '__main__.MovieRecommendation'>\n",
-      "movie_title='The Sixth Sense' reason='1990년대 클래식한 느낌의 공포 영화로, 심리적인 긴장감과 반전에 강한 작품입니다.' genre=['공포', '미스터리', '스릴러'] estimated_rating=8.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 체인 구성 및 실행\n",
-    "query = \"1990년대 클래식한 느낌의 공포 영화 추천해줘\"\n",
-    "chain = prompt | model | parser\n",
-    "output = chain.invoke({\"query\": query})\n",
-    "\n",
-    "print(type(output))\n",
-    "print(output)"
    ]
   },
   {
@@ -154,9 +133,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "추천 영화: The Sixth Sense\n",
-      "추천 이유: 1990년대 클래식한 느낌의 공포 영화로, 심리적인 긴장감과 반전에 강한 작품입니다.\n",
-      "장르: 공포, 미스터리, 스릴러\n",
+      "<class '__main__.MovieRecommendation'>\n",
+      "MovieRecommendation(movie_title='스크림(1996)', reason='90년대 감성 물씬 나는 마스크 살인마가 등장하는 메타 공포물. 클래식한 슬래셔 요소에 현대적인 해석을 더해 당대 관객들에게 큰 충격을 줬으며, 오늘날까지도 회자되는 명장면들이 많다.', genre=['공포', '스릴러', '메타퍼블릭', '슬래셔'], estimated_rating=8.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 체인 구성 및 실행\n",
+    "query = \"1990년대 클래식한 느낌의 공포 영화 추천해줘\"\n",
+    "chain = prompt | model | parser\n",
+    "output = chain.invoke({\"query\": query})\n",
+    "\n",
+    "print(type(output))\n",
+    "pprint(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "추천 영화: 스크림(1996)\n",
+      "추천 이유: 90년대 감성 물씬 나는 마스크 살인마가 등장하는 메타 공포물. 클래식한 슬래셔 요소에 현대적인 해석을 더해 당대 관객들에게 큰 충격을 줬으며, 오늘날까지도 회자되는 명장면들이 많다.\n",
+      "장르: 공포, 스릴러, 메타퍼블릭, 슬래셔\n",
       "예상 평점: 8.5/10\n"
      ]
     }
@@ -185,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
