--- a/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gs\n"
+      "gsk_f\n"
      ]
     }
    ],
@@ -45,10 +45,10 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "# .env 파일을 불러와서 환경 변수로 설정\n",
-    "load_dotenv(dotenv_path='../.env')\n",
+    "load_dotenv()\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:2])"
+    "print(OPENAI_API_KEY[:5])"
    ]
   },
   {
@@ -91,7 +91,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['text'] input_types={} partial_variables={'format_instructions': 'Select one of the following options: 긍정, 부정, 중립'} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['format_instructions', 'text'], input_types={}, partial_variables={}, template='\\n당신은 텍스트 감정 분석 전문가입니다.\\n다음 텍스트의 감정을 분석하고, 반드시 아래 세 가지 중 하나의 단어로만 답변하세요.\\n\\n텍스트: \"{text}\"\\n\\n{format_instructions}\\n\\n중요 규칙:\\n1. 반드시 \"긍정\", \"부정\", \"중립\" 중 하나의 단어만 출력하세요.\\n2. 다른 설명이나 부가 설명을 추가하지 마세요.\\n3. 이모지나 특수문자도 포함하지 마세요.\\n4. 오직 하나의 단어만 출력하세요.\\n\\n답변:'), additional_kwargs={})]\n"
+     ]
+    }
+   ],
    "source": [
     "# 프롬프트 템플릿\n",
     "template = \"\"\"\n",
@@ -103,15 +111,16 @@
     "{format_instructions}\n",
     "\n",
     "중요 규칙:\n",
-    "1. 반드시 \"긍정\", \"부정\", \"중립\" 중 하나의 단어만 출력하세요\n",
-    "2. 다른 설명이나 부가 설명을 추가하지 마세요\n",
-    "3. 이모지나 특수문자도 포함하지 마세요\n",
-    "4. 오직 하나의 단어만 출력하세요\n",
+    "1. 반드시 \"긍정\", \"부정\", \"중립\" 중 하나의 단어만 출력하세요.\n",
+    "2. 다른 설명이나 부가 설명을 추가하지 마세요.\n",
+    "3. 이모지나 특수문자도 포함하지 마세요.\n",
+    "4. 오직 하나의 단어만 출력하세요.\n",
     "\n",
     "답변:\"\"\"\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
-    "prompt = prompt.partial(format_instructions=format_instructions)"
+    "prompt = prompt.partial(format_instructions=format_instructions)\n",
+    "print(prompt)"
    ]
   },
   {
@@ -123,6 +132,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "parser=EnumOutputParser(enum=<enum 'Sentiment'>) retry_chain=PromptTemplate(input_variables=['completion', 'error', 'instructions'], input_types={}, partial_variables={}, template='Instructions:\\n--------------\\n{instructions}\\n--------------\\nCompletion:\\n--------------\\n{completion}\\n--------------\\n\\nAbove, the Completion did not satisfy the constraints given in the Instructions.\\nError:\\n--------------\\n{error}\\n--------------\\n\\nPlease try again. Please only respond with an answer that satisfies the constraints laid out in the Instructions:')\n",
+      "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x000001EE73BCEA20>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000001EE7383E270>, root_client=<openai.OpenAI object at 0x000001EE720653A0>, root_async_client=<openai.AsyncOpenAI object at 0x000001EE7383E180>, model_name='moonshotai/kimi-k2-instruct-0905', temperature=0.0, model_kwargs={}, openai_api_key=SecretStr('**********'), openai_api_base='https://api.groq.com/openai/v1')\n",
+      "| StrOutputParser()\n",
       "모델 및 파서 설정 완료\n"
      ]
     }
@@ -139,26 +151,28 @@
     "model = ChatOpenAI(\n",
     "    #api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0  # 일관성을 위해 0으로 설정\n",
     ")\n",
     "\n",
     "# OutputFixingParser로 안정성 향상\n",
     "fixing_parser = OutputFixingParser.from_llm(parser=parser, llm=model)\n",
+    "print(fixing_parser)\n",
     "\n",
     "print(\"모델 및 파서 설정 완료\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "테스트할 텍스트 6개 준비 완료\n"
+      "테스트할 텍스트 7개 준비 완료\n"
      ]
     }
    ],
@@ -170,7 +184,8 @@
     "    \"이 제품 그런대로 괜찮습니다.\",\n",
     "    \"배송은 빠르지만 품질이 아쉽습니다.\",\n",
     "    \"최고의 경험이었습니다!\",\n",
-    "    \"완전 실망했어요... 최악이에요\"\n",
+    "    \"완전 실망했어요... 최악이에요\",\n",
+    "    \"오늘 오전에는 비가 내렸습니다.\"\n",
     "]\n",
     "\n",
     "print(f\"테스트할 텍스트 {len(texts)}개 준비 완료\")"
@@ -234,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,9 +276,12 @@
       "6. 텍스트: 완전 실망했어요... 최악이에요\n",
       "   감정: 부정 \n",
       "\n",
+      "7. 텍스트: 오늘 오전에는 비가 내렸습니다.\n",
+      "   감정: 중립 \n",
+      "\n",
       "=== 결과 요약 ===\n",
-      "성공: 6/6 (100.0%)\n",
-      "실패: 0/6\n"
+      "성공: 7/7 (100.0%)\n",
+      "실패: 0/7\n"
      ]
     }
    ],
@@ -273,6 +291,7 @@
     "    \"\"\"안전한 감정 분석 함수 - 에러 처리 포함\"\"\"\n",
     "    try:\n",
     "        # 기본 체인 생성\n",
+    "        # use_fixing_parser가 True이면 OutputFixingParser가 적용되고, False이면 EnumOutputParser가 적용됨\n",
     "        chain = prompt | model | (fixing_parser if use_fixing_parser else parser)\n",
     "        \n",
     "        # 분석 실행\n",
@@ -454,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
