--- a/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gs\n"
+      "gsk_fSXtdh\n"
      ]
     }
    ],
@@ -38,12 +38,12 @@
     "load_dotenv(dotenv_path='../.env')\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:2])"
+    "print(OPENAI_API_KEY[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,14 +129,15 @@
     "model = ChatOpenAI(\n",
     "    #api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0.7\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -170,17 +171,21 @@
      "output_type": "stream",
      "text": [
       "===== 분석 결과 =====\n",
-      "{'cons': ['가격이 조금 비싸다', '무게가 200g이 넘어서 손이 피곤할 수 있다'],\n",
-      " 'pros': ['배터리 수명이 정말 좋다', '카메라 화질이 선명하다', '야간 모드가 훌륭하다'],\n",
-      " 'rating': '4',\n",
-      " 'summary': '스마트폰의 배터리 수명과 카메라 화질이 우수하지만, 가격이 비싸고 무겁다는 점이 단점이다.'}\n"
+      "<class 'dict'>\n",
+      "{'cons': ['가격이 비쌈', '무게 200 g으로 손목에 부담', '무거운 무게로 인한 피로감'],\n",
+      " 'pros': ['하루 종일 사용 가능한 우수한 배터리 수명', '선명한 카메라 화질', '야간 모드 성능이 뛰어남'],\n",
+      " 'rating': '4.5',\n",
+      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰.'}\n",
+      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰.\n"
      ]
     }
    ],
    "source": [
     "# 결과 출력 (Pretty Print)\n",
     "print(\"===== 분석 결과 =====\")\n",
-    "pprint(output)"
+    "print(type(output))\n",
+    "pprint(output)\n",
+    "print(output['summary'])"
    ]
   },
   {
@@ -201,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
