--- a/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
+++ b/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
@@ -554,6 +554,9 @@
    "source": [
     "from IPython.display import Image, display\n",
     "from langchain_core.runnables.graph import CurveStyle, MermaidDrawMethod, NodeStyles\n",
+    "import nest_asyncio \n",
+    "\n",
+    "nest_asyncio.apply()\n",
     "\n",
     "display(\n",
     "    Image(\n",
